<resources>
    <string name="app_name">Ace</string>
    <string name="attendance">Attendance</string>
    <string name="reminders">Reminders</string>
    <string name="timetable">Timetable</string>
    <string name="files">Files</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="appNameCaps">ACE</string>
    <string name="heading1">One stop for all college requirements</string>
    <string name="sign_out">Sign out</string>
    <string name="course_code">Course code</string>
    <string name="target_attendance">Target attendance</string>
    <string name="explore_more_options">Explore more options</string>
    <string name="temp_text1">Attend next 1 class to hit target</string>
    <string name="course_name">Course name</string>
    <string name="temp_text2">90%</string>
    <string name="temp_text3">Course code</string>
    <string name="temp_text4">9/10</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="enter_above_details">Enter above details</string>
    <string name="delete_course">Delete course</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="time_format">hh:mm:ss</string>
    <string name="set_time">SET TIME</string>
    <string name="set_date">SET DATE</string>
    <string name="set_reminder">SET REMINDER</string>
    <string name="title_name">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="task_done">task done</string>
    <string name="delete_reminder">delete reminder</string>
    <string name="timetable_dialog_text">Use the bottom navigation to navigate through the days of the week. \nTap the + icon to add lecture details of that particular day.</string>
    <string name="lecture_title">Lecture title</string>
    <string name="lecture_more_options">Lecture - more options</string>
    <string name="lecture_course_code">Lecture course code</string>
    <string name="lecture_timings">Lecture timings</string>
    <string name="professor">Professor</string>
    <string name="room_no">Room no.</string>
    <string name="room_number_optional">Room number (optional)</string>
    <string name="professor_s_name_optional">Professor\'s name (optional)</string>
    <string name="set_end_time_button_text">SET END TIME</string>
    <string name="set_start_time_button_text">SET START TIME</string>
    <string name="attendance_dialog_text">Tap the + icon to add a new course and track its attendance. \nIn the list of courses, tap the green button to indicate you\'ve attended a class and tap the red button to indicate you\'ve missed a class.  \nLong press the 3 vertical dots to access more options related to a particular course.</string>
    <string name="reminder_dialog_text">Tap the + icon to add a new reminder. \n All reminders will be notified at the time set. \n Tap the tick icon in the list of reminders to indicate if the particular task is completed. \nTap the bin icon to delete the reminder.</string>
</resources>
