<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/timetable_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    app:cardBackgroundColor="#ccf2ff"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/lecture_start_and_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/lecture_more_options"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingTop="5dp"
            android:text="@string/lecture_timings"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#003380" />

        <TextView
            android:id="@+id/lecture_course_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lecture_start_and_end_time"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_toStartOf="@id/lecture_course_code"
            android:ellipsize="end"
            android:maxLines="1"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:text="@string/lecture_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <ImageButton
            android:id="@+id/lecture_more_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/lecture_more_options"
            android:src="@drawable/ic_more_vert" />

        <TextView
            android:id="@+id/lecture_course_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lecture_start_and_end_time"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:text="@string/professor"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/lecture_course_professor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lecture_course_title"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/lecture_room_number"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/lecture_course_code"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/lecture_room_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lecture_course_title"
            android:layout_alignParentEnd="true"
            android:maxLines="1"
            android:text="@string/room_no"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:visibility="invisible" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>