<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/reminder_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    app:cardBackgroundColor="#A9A9A9"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/reminder_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/title_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/reminder_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reminder_title"
            android:layout_alignParentStart="true"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/reminder_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reminder_description"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@id/reminder_time"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingTop="5dp"
            android:text="@string/date"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/reminder_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reminder_description"
            android:layout_alignParentEnd="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingTop="5dp"
            android:text="@string/time"
            android:textAppearance="@style/TextAppearance.AppCompat" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>