<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/new_lecture_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:hint="@string/course_name"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/new_lecture_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_lecture_title"
        android:ellipsize="end"
        android:hint="@string/course_code"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/new_lecture_professor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_lecture_code"
        android:hint="@string/professor_s_name_optional"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/new_lecture_room_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_lecture_professor"
        android:ellipsize="end"
        android:hint="@string/room_number_optional"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/lecture_start_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_lecture_room_number"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="Start time:"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/lecture_start_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_lecture_room_number"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/lecture_start_string"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/start_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_lecture_room_number"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:background="@color/fui_transparent"
        android:padding="4dp"
        android:text="@string/set_start_time_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/lecture_end_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_time_picker"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="End time:"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/lecture_end_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_time_picker"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/lecture_end_string"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/end_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_time_picker"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:background="@color/fui_transparent"
        android:padding="4dp"
        android:text="@string/set_end_time_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/add_lecture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/end_time_picker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/fui_transparent"
        android:text="ADD TO TIMETABLE"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorAccent"
        android:padding="15dp"/>

</RelativeLayout>