<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/new_reminder_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="176dp"/>

    <EditText
        android:id="@+id/new_reminder_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_reminder_title"
        android:ellipsize="end"
        android:hint="@string/description"
        android:maxLines="4"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/date_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_reminder_description"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="Date:"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_reminder_description"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/date_string"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_reminder_description"
        android:layout_alignParentEnd="true"
        android:background="@color/fui_transparent"
        android:text="@string/set_date"
        android:layout_marginTop="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/time_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_picker"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="Time:"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_picker"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/date_string"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_picker"
        android:layout_alignParentEnd="true"
        android:background="@color/fui_transparent"
        android:text="@string/set_time"
        android:layout_marginTop="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/set_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_picker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/fui_transparent"
        android:text="@string/set_reminder"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorAccent" />

</RelativeLayout>